@@ -123,9 +123,7 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
 
         var cache_entry = this.renderers[key];
 
-        if ( ! cache_entry || ( params.hasOwnProperty('cache_buster') &&
-                                cache_entry.cache_buster != cache_buster ) )
-        {
+        if (this.shouldRecreateRenderer(cache_entry, cache_buster)) {
 
             cache_entry = this.renderers[key] = new CacheEntry();
             cache_entry.cache_buster = cache_buster;
@@ -156,6 +154,19 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
 
         cache_entry.pushCallback(callback);
     };
+
+    me.shouldRecreateRenderer = function(cacheEntry, cacheBuster) {
+        if (cacheEntry) {
+            var entryCacheBuster = parseFloat(cacheEntry.cache_buster);
+                requestCacheBuster = parseFloat(cacheBuster);
+
+            if (isNaN(entryCacheBuster) || isNaN(requestCacheBuster)) {
+                return cacheEntry.cache_buster != cacheBuster;
+            }
+            return requestCacheBuster > entryCacheBuster;
+        }
+        return true;
+    }
 
     me.dbParamsFromReqParams = function(params) {
         var dbParams = {};
